--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ eventlet==0.33.3
 python-dotenv==1.0.1
 langchain==0.1.14
 langchain-community==0.0.31
-langchain-huggingface==0.0.7
+langchain-huggingface
 transformers==4.38.2
 torch==2.2.1
 numpy==1.26.4
