--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ Flask-SocketIO==5.3.4
 eventlet==0.33.3
 python-dotenv==1.0.1
 langchain==0.1.14
+langchain-core==0.3.15  # Matches langchain-huggingface requirement
 langchain-community==0.0.31
-langchain-huggingface==0.1.2  # Latest available version
+langchain-huggingface==0.1.2
 transformers==4.38.2
 torch==2.2.1
 numpy==1.26.4
