--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Flask==3.0.0
-Flask-SocketIO==5.3.4
-eventlet==0.33.3
-python-dotenv==1.0.1
-langchain==0.1.14
-langchain-core==0.3.15  # Matches langchain-huggingface requirement
-langchain-community==0.0.31
-langchain-huggingface==0.1.2
-transformers==4.38.2
-torch==2.2.1
-numpy==1.26.4
-gunicorn==21.2.0
+Flask
+Flask-SocketIO
+eventlet
+python-dotenv
+langchain
+langchain-core
+langchain-community
+langchain-huggingface
+transformers
+torch
+numpy
+gunicorn
